fix form fields overlapping

--- a/public/static/css/app.css
+++ b/public/static/css/app.css
@@ -12,7 +12,6 @@ body, button, input, select, textarea {
 }
 
 .container {
-	max-width:900px;
 	height: 100%;
 }
 
@@ -60,6 +59,32 @@ body, button, input, select, textarea {
 	bottom: 0;
 }
 
+#pdf-contents .page ::-webkit-input-placeholder {
+    color: #4f81bd;
+}
+
+#pdf-contents .page :-moz-placeholder {
+   color: #4f81bd;
+   opacity:  1;
+}
+
+#pdf-contents .page ::-moz-placeholder {
+   color: #4f81bd;
+   opacity:  1;
+}
+
+#pdf-contents .page :-ms-input-placeholder {
+   color: #4f81bd;
+}
+
+#pdf-contents .page ::-ms-input-placeholder {
+   color: #4f81bd;
+}
+
+#pdf-contents .page ::placeholder {
+   color: #4f81bd;
+}
+
 #pdf-contents .page input,
 #pdf-contents .page .select,
 #pdf-contents .page textarea {
@@ -69,11 +94,29 @@ body, button, input, select, textarea {
 #pdf-contents .page input, 
 #pdf-contents .page select,
 #pdf-contents .page textarea {
-	border-width: 4px;
+	color: #4f81bd;
+	border-width:4px;
+	border-color: transparent;
+	box-shadow: none;
+	background-color: transparent;
 }
 
 #pdf-contents .page select{
 	padding-top: 5px;
+}
+#pdf-contents .page input:hover, 
+#pdf-contents .page select:hover,
+#pdf-contents .page textarea:hover {
+	background-color: inherit;
+	border-color: #4f81bd;
+	box-shadow: inherit;
+}
+
+#pdf-contents .page input:focus, 
+#pdf-contents .page select:focus,
+#pdf-contents .page textarea:focus {
+	background-color: #255691;
+	color: white;
 }
 
 #pdf-actions {
@@ -118,4 +161,10 @@ body, button, input, select, textarea {
 	margin: 20px auto 0 auto;
 	font-size: 13px;
 	text-align: center;
+}
+
+@media screen and (max-width: 1440px) {
+	.container {
+		max-width: 900px;
+	}
 }
